# ChangeLog for app-text/acroread
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.136 2009/10/27 07:43:10 a3li Exp $

  27 Oct 2009; Alex Legler <a3li@gentoo.org> -acroread-9.1.3.ebuild:
  Non-maintainer commit: Removing vulnerable version, security bug 289016.

  24 Oct 2009; Christian Faulhammer <fauli@gentoo.org> acroread-9.2.ebuild:
  x86 stable, security bug 289016

  24 Oct 2009; Romain Perier <mrpouet@gentoo.org>
  acroread-9.2.ebuild:
  Stable for amd64 due to multiple vulnerabilities fixed, per bug #289016.

*acroread-9.2 (21 Oct 2009)

  21 Oct 2009; Timo Gurr <tgurr@gentoo.org> -acroread-8.1.6.ebuild,
  -acroread-9.1.2.ebuild, +acroread-9.2.ebuild:
  Version bump, remove old.

  01 Aug 2009; Markus Meier <maekke@gentoo.org> acroread-9.1.3.ebuild:
  amd64/x86 stable, bug #278813

*acroread-9.1.3 (31 Jul 2009)

  31 Jul 2009; Timo Gurr <tgurr@gentoo.org> -acroread-8.1.4.ebuild,
  +acroread-9.1.3.ebuild:
  Version bump, fixes 9.x only security issue (CVE-2009-1862), see bug
  #278813. Remove old.

  21 Jun 2009; Tobias Heinlein <keytoaster@gentoo.org>
  acroread-8.1.6.ebuild, acroread-9.1.2.ebuild:
  amd64 stable, security bug #273908

  18 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  acroread-9.1.2.ebuild:
  stable x86, security bug 273908

  18 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  acroread-8.1.6.ebuild:
  stable x86, security bug 273908

*acroread-9.1.2 (17 Jun 2009)
*acroread-8.1.6 (17 Jun 2009)

  17 Jun 2009; Timo Gurr <tgurr@gentoo.org> -acroread-8.1.3.ebuild,
  +acroread-8.1.6.ebuild, -acroread-9.1.0.ebuild, +acroread-9.1.2.ebuild:
  Version bumps fixing security issues, see bug #267846 and #273908.

  14 Apr 2009; Raúl Porcel <armin76@gentoo.org> acroread-8.1.4.ebuild:
  x86 stable wrt #259992

  09 Apr 2009; Ulrich Mueller <ulm@gentoo.org> acroread-8.1.4.ebuild,
  acroread-9.1.0.ebuild: