@@ -1,6 +1,11 @@
 # ChangeLog for app-text/acroread
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.136 2009/10/27 07:43:10 a3li Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.137 2010/01/15 15:55:06 tgurr Exp $
+
+*acroread-9.3 (15 Jan 2010)
+
+  15 Jan 2010; Timo Gurr <tgurr@gentoo.org> +acroread-9.3.ebuild:
+  Version bump, wrt security bug #297385 (CVE-2009-4324).
 
   27 Oct 2009; Alex Legler <a3li@gentoo.org> -acroread-9.1.3.ebuild:
   Non-maintainer commit: Removing vulnerable version, security bug 289016.
